--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -364,15 +364,15 @@
           </section>
           <section class="shadow-sm p-3 mb-3 bg-white rounded">
             <h5>1. Framework log</h5>
-            <div class="log" ng-bind-html="currentFrameworkLog | log"></div>
+            <pre class="log" ng-bind-html="currentFrameworkLog | log"></pre>
             <h5>2. Lib Build log</h5>
-            <div class="log" ng-bind-html="currentLibBuildLog | log"></div>
+            <pre class="log" ng-bind-html="currentLibBuildLog | log"></pre>
             <h5>3. Lib Debloat log</h5>
-            <div class="log" ng-bind-html="currentLibDebloatLog | log"></div>
+            <pre class="log" ng-bind-html="currentLibDebloatLog | log"></pre>
             <h5>4. Client Build log</h5>
-            <div class="log" ng-bind-html="currentClientBuildLog | log"></div>
+            <pre class="log" ng-bind-html="currentClientBuildLog | log"></pre>
             <h5>5. Client Debloat log</h5>
-            <div class="log" ng-bind-html="currentClientDebloatLog | log"></div>
+            <pre class="log" ng-bind-html="currentClientDebloatLog | log"></pre>
           </section>
         </div>
       </div>
