count filter result

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -95,6 +95,9 @@
               <option value="pass">Pass</option>
             </select>
           </div>
+          <div class="col">
+            # lib: {{nbLibs}} # version: {{nbVersions}} # client: {{nbClients}}
+          </div>
         </form>
       </div>
       <div id="page-wrapper" class="container-fluid row">
