--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -173,7 +173,7 @@
         </div>
         <div class="col-6 scrollable px-2">
           <h2>
-            {{currentLibName}}:{{currentVersionName}} & {{currentClientName}}
+            <a href="https://github.com/{{currentVersion.repo_name}}" target="__blank">{{currentVersion.repo_name}}</a>:{{currentVersionName}} & <a href="https://github.com/{{currentClientName}}" target="__blank">{{currentClientName}}</a>
           </h2>
           <section class="shadow-sm p-3 mb-3 bg-white rounded categoriesSection">
             <div class="row">
