add link to download pom

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -223,7 +223,7 @@
             </div>
           </section>
           <section class="shadow-sm p-3 mb-3 bg-white rounded">
-            <h5>Library</h5>
+            <h5>Library (<a href="/data/{{currentLibName}}/{{currentVersionName}}/original/pom.xml" target="__blank">Original pom.xml</a> <a href="/data/{{currentLibName}}/{{currentVersionName}}/debloat/pom.xml" target="__blank">Debloated pom.xml</a></h5>
             <table class="table my-4">
               <thead>
                 <tr>
